syntax = "proto3";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo";
option java_outer_classname = "RococoGeoProto";

service RococoGeoService {
    rpc GetAllCountries (AllCountriesRequest) returns (AllCountriesResponse) {}
}

message AllCountriesRequest {
    int32 page = 1;
    int32 size = 2;
}

message AllCountriesResponse {
    repeated Country countries = 1;
    int64 total_count = 2;
}

message Country {
    string id = 1;
    string name = 2;
}
